src/sections/navbar/navbar.css
/* Navbar */
nav {
  height: 6rem;
  display: flex;
  justify-content: space-around;
  place-items: center;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 99;
  /* box-shadow: 0 40px 60px rgba(51, 201, 255, 0.03); */
  transition: all 0.1s ease;
  z-index: 500;
  background: white;
  /* background: transparent !important; */
  margin: 0 auto;
  align-items: center;
  text-align: center;
}

.container.nav__container {
  width: 100vw;
  max-width: 1440px;
  display: flex;
  margin: 0 auto;
  padding: 0 40px;
  align-items: center;
  vertical-align: middle;
}
.navbar.dark {
  color: #fff;
}

.container.dark .nav__container .nav__item {
  align-items: center;
  color: #fff;
  background: transparent !important;
}

.container.dark .nav__container .nav__logo {
  background: #fff;
  font-size: 20px;
  padding: 5px;
}
.container.dark .nav__container .nav__item:hover::after {
  content: " ";
  height: 4px;
  width: 75%;
  position: absolute;
  background-color: var(--primary-background-color);
  left: 2px;
  bottom: -4px;
  transition: all 0.3s ease-in;
}

.container.dark .nav__container .nav__item.dark:hover::after {
  background-color: var(--primary-brand-color-400);
}

.container.dark .nav__container .navbar__btns svg {
  color: #fff;
}

/**/
.nav__logo {
  overflow: hidden;
  border-radius: 50%;
  width: 2.5rem;
  height: 2.5rem;
}

.nav__logo:hover {
  transform: scale(1.1);
}

.nav__container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
  background: transparent !important;
}

.nav__menu {
  display: flex;
  gap: 3.5rem;
  margin-top: 10px;
  margin-left: 8rem;
}

.nav__item {
  font-size: 1.5rem;
  color: var(--primary-text-color-800);
  position: relative;
}

.nav__item:hover {
  color: var(--primary-brand-color-600);
}

.nav__item:hover::after {
  content: " ";
  height: 4px;
  width: 75%;
  position: absolute;
  background-color: var(--primary-brand-color-400);
  left: 2px;
  bottom: -4px;
  transition: all 0.3s ease-in;
}

.nav__item.dark:hover::after {
  background-color: var(--primary-brand-color-400);
}

.navbar__btns {
  display: flex;
  gap: 2.3rem;
  align-items: center;
  justify-content: center;
  position: relative;
}

.icon {
  font-size: 2rem;
  color: var(--primary-text-color-800);
  justify-content: center;
  align-items: center;
  margin-top: 10px;
  background-color: transparent;
}

.icon_dark_button {
  padding: 0;
  margin: 0;
  background-color: inherit;
  background: inherit;
  transition: all 0.3s ease-in-out;
  transform: none;
  font-size: 20px;
  box-shadow: none;
  margin-top: 10px;
}

.theme-icon {
  transition: all 0.6s ease-in-out;
  color: var(--primary-text-color-800);
}

.contact {
  background-color: transparent;
  transition: none !important;
  transform: translateY(0) !important;
  animation: none !important;
}

.btn-contact {
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0.5px;
  background: var(--primary-brand-color-400);
  color: var(--primary-background-color);
  box-shadow: 0 3px 4px 0 rgb(0 0 0 / 7%);
}

.btn-contact:hover {
  opacity: 0.9;
  transform: translateY(-3px);
  transition: 300ms ease-in;
}

.btn-hamburger {
  cursor: pointer;
  background: none;
  position: fixed;
  position: absolute;
  top: 0px;
  right: 0px;
  display: none;
  transition: all 0.3s ease-in;
  margin-top: 10px;
  font-size: 2.5rem;
  color: var(--secondary-brand-color-alternate-800);
}

.theme-toggle {
  background: none;
  border: none;
  cursor: pointer;
  color: var(--text-color);
}

/* Navbar Modal */

.navbarmodal-overlay {
  position: absolute;
  inset: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100vh;
  background: rgba(255, 255, 255, 0.3);
  backdrop-filter: blur(3px);
  -webkit-backdrop-filter: blur(3px); /* for Safari */
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  z-index: 100;
  transition: all 0.8s ease-in-out;
}

.navbarmodal-overlay.dark {
  background: rgba(49, 49, 49, 0.3);
}

.navbarmodal-container {
  width: 250px;
  height: 100%;
  z-index: 120;
  font-size: 20px;
  color: black;
  background-color: rgb(248, 248, 248);
  margin-right: 0;
  position: fixed;
  box-shadow: var(--primary-brand-color-400);
  top: 0px;
  right: -100%;
  transition: 0.8s ease-in-out !important;
  border-left: 1px solid black;
  display: flex;
}

.navbarmodal-container.show {
  right: 0;
}

/* .transform-modal {
  /* transform: translateX(0px); 
  right: 0;
 */

/* dark mode */
.navbarmodal-container.dark {
  background: #1b1b1b;
  color: #ffffff;
}

/* dark mode */
.navbarmodal-container.dark {
  /* border-left: 0.5px solid #fefefe; */
  box-shadow: -5px 0 5px -5px rgba(228, 228, 228, 0.5);
}

.close-icon {
  position: absolute;
  top: 20px;
  right: 20px;
  cursor: pointer;
}

.back-icon {
  position: absolute;
  top: 22px;
  left: 30px;
  cursor: pointer;
}

.back-icon:hover,
.close-icon:hover,
.navbar-modal-contact:hover {
  color: var(--primary-brand-color-600);
}

.navbar-modal {
  display: flex;
}

.menu-listModal {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  text-align: left;
  margin-top: 90px;
  margin-left: 30px;
  cursor: pointer;
}

.menu-listModal > li {
  font-size: 24px;
}

.nav__item.dark {
  color: #fefefe;
}

.navbar-modal-contact {
  padding: 1px;
  margin-top: -5px;
  width: 100%;
  display: block;
  transition: var(--transition);
}

.navbar-modal-contact:hover {
  transform: translateX(4px);
}

@media screen and (min-width: 1440px) {
  .navbar {
    width: 100vw;
    margin: 0 auto;
  }
}
@media screen and (max-width: 1024px) {
  .navbarmodal-container {
    transition: 0.8s ease-in-out;
  }

  .navbar {
    padding: 0 20px;
  }
  .container.nav__container {
    vertical-align: middle;
    display: flex;

    align-items: center;
  }
  .navbar__btns {
    display: flex;
    align-items: center;
    padding-bottom: 10px;
    margin-right: 20px;
  }
  .navbar .nav__menu {
    display: none;
  }
  .nav {
    transition: none;
  }
  .btn-contact {
    display: none;
  }
  .btn-hamburger {
    display: block;
    margin-bottom: 10px;
  }
  .icon_dark_button {
    vertical-align: center;
    margin-top: 15px;
    margin-right: 60px;
  }
  .navbarmodal-container {
    display: block;
  }
}

@media screen and (max-width: 799px) {
  .navbarmodal-container {
    width: 100%;
    padding-left: 10px;
  }
  .nav__item {
    font-size: 3.2rem;
  }
  .navbar-modal-contact li a {
    font-size: 3.2rem;
  }
  .navbarmodal-contact-item a {
    font-size: 3.2rem !important;
  }
  svg.back-icon {
    margin-left: 5px;
    width: 40px;
    height: 40px;
  }
  svg.close-icon {
    margin-right: 20px;
    width: 40px;
    height: 40px;
  }
}

